Sat Nov 15 17:10:14 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/iconv.c src/tds/read.c src/tds/unittests/Makefile.am:
	* src/tds/unittests/utf8_2.c(added):
	- some fixes for iconv stuff
	- added test for conversion from utf8

Sat Nov 15 10:37:58 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* doc/api_status.txt: added SQLFetchScroll
	* src/tds/iconv.c: fixed for dblib problem
	* src/odbc/odbc.c: rollback

Sat Nov 15 10:26:28 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/unittests/common.c src/tds/unittests/common.h:
	* src/tds/unittests/utf8_1.c:
	- continued UTF8 test

Thu Nov 13 15:58:38 EST 2003	JK Lowden <jklowden@schemamania.org>
	* src/tds/read.c prepare read_and_convert for UTF-8

Thu Nov 13 14:09:00 EST 2003	JK Lowden <jklowden@schemamania.org>
	* src/tds/read.c fix logging in tds_get_char_data()
	* src/tds/token.c log return status of stored procedures

Thu Nov 13 08:46:23 EST 2003	JK Lowden <jklowden@schemamania.org>
	- Applied Frediano's patch:
	* src/odbc/Makefile.am  src/odbc/convert_sql2string.c
	* src/odbc/convert_sql2string.h src/odbc/convert_tds2sql.c
	* src/odbc/odbc.c src/odbc/odbc_util.c src/odbc/odbc_util.h
	* src/odbc/prepare_query.c src/odbc/sql2tds.c
	* src/odbc/unittests/common.c src/odbc/unittests/genparams.c
	* src/tds/query.c vms/odbc_driver_axp.opt win32/FreeTDS.def
	- some fix for numeric parameters in ODBC
	- some fix for SQL_C_DEFAULT in ODBC
	- added SQLFetchScroll
	- cleanup
	- do not use convert_sql2string.[ch]
	* src/odbc/checkexport.sh some fixes for libtool update

Wed Nov 12 23:45:02 PST 2003	Peter Deacon <peterd@iea-software.com>
	* src/odbc/odbc.c: commit/rollback with pending results

Sun Nov  9 08:48:46 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* include/tdsodbc.h src/odbc/error.c src/odbc/odbc.c:
	- remove attr_ prefix from all attributes

Sat Nov  8 18:51:21 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/convert_sql2string.c src/odbc/convert_tds2sql.c: