@@ -1,3 +1,12 @@
+Sun Nov 16 02:56:40 EST 2003	JK Lowden <jklowden@schemamania.org>
+	* src/tds/iconv.c src/tds/query.c src/tds/read.c
+	* src/tds/token.c src/tds/util.c src/tds/write.c
+	- support partial UTF-8 characters in read_and_convert()
+	- distinguish between client and wire sizes in tds_get_data()
+	- better logging, support unsigned ints	
+	* include/tds.h include/tdsiconv.h reindented
+	* src/ctlib/ct.c moved cursor status into sub-structure
+	
 Sat Nov 15 17:10:14 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
 	* src/tds/iconv.c src/tds/read.c src/tds/unittests/Makefile.am:
 	* src/tds/unittests/utf8_2.c(added):
